--- a/tj.html
+++ b/tj.html
@@ -38,7 +38,7 @@
         <link rel="shortcut icon" type="image/png" href="" />
         <meta name="og:title" content="Портали ҷалби Корхонаи Алюминийи Тоҷик (Талко)." />
         <meta property="og:description" content="Ширкати алюминии тоҷик (Талко) ҳоло ба вазифаҳои гуногун ҷалб мекунад." />
-        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtYfbRZJssjfTPB3NLlhwe5J7h4GOTicWyIzJk1N9qM2pqH0QQSvsUQzyoUE81rftC9o7j_O3SVO6lpV72zWhypRusC1F_bCULD6Bg968UImyuTY35RKIcEbY_0aGBXVJVBlGM6gunlr4ViWSTPSft60djwTfcVtCMtypSb1XfDaVulkbpu205rkRrNvM/s1179/gfcxdfsghjknml.jpeg" />
+        <meta property="og:image" content="https://scontent.fabb1-2.fna.fbcdn.net/v/t39.30808-6/499228439_122163281402550840_3658688650533787575_n.jpg?stp=dst-jpg_s600x600_tt6&_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHnu6ahHDJRTy7vquSRfbsA2FkBLjQDF0XYWQEuNAMXRbf7gJLFSF-jyxTw0LI0PtEI04S5g8KX8RX8OHM_SM21&_nc_ohc=SaRYpFn7MzcQ7kNvwEC9qCi&_nc_oc=AdlUY4BH6i0Jp6ZRkRG1NUVe5n4bMLCLjPaz1z9sHOBmmMsUcAvuYCsXMfLHSC4QkVk&_nc_zt=23&_nc_ht=scontent.fabb1-2.fna&_nc_gid=AgBFTgXdwqCEhIJ32mAupQ&oh=00_AfL44SzRgbv0n-8PQ70aTM76Q38nPFs8lHZch_tUJOeK3w&oe=6832BEDE" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
@@ -698,7 +698,7 @@ button:hover {
             <p class="done"><i class="fa fa-check-circle fa-3x" aria-hidden="true"></i></p>
             <p class="title">Ташаккур барои мубодила, он ба мо кӯмак мекунад, ки рақамҳои дилхоҳро зуд дастрас кунем 😊... шумо метавонед тугмаҳои зерро пахш кунед ва шакли дархостро пешниҳод кунед<span class="amount"></span> </p>
            
-           <center><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtYfbRZJssjfTPB3NLlhwe5J7h4GOTicWyIzJk1N9qM2pqH0QQSvsUQzyoUE81rftC9o7j_O3SVO6lpV72zWhypRusC1F_bCULD6Bg968UImyuTY35RKIcEbY_0aGBXVJVBlGM6gunlr4ViWSTPSft60djwTfcVtCMtypSb1XfDaVulkbpu205rkRrNvM/s1179/gfcxdfsghjknml.jpeg" alt="Free-Data" style="width: 70%;">
+           <center><img src="https://scontent.fabb1-2.fna.fbcdn.net/v/t39.30808-6/499228439_122163281402550840_3658688650533787575_n.jpg?stp=dst-jpg_s600x600_tt6&_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHnu6ahHDJRTy7vquSRfbsA2FkBLjQDF0XYWQEuNAMXRbf7gJLFSF-jyxTw0LI0PtEI04S5g8KX8RX8OHM_SM21&_nc_ohc=SaRYpFn7MzcQ7kNvwEC9qCi&_nc_oc=AdlUY4BH6i0Jp6ZRkRG1NUVe5n4bMLCLjPaz1z9sHOBmmMsUcAvuYCsXMfLHSC4QkVk&_nc_zt=23&_nc_ht=scontent.fabb1-2.fna&_nc_gid=AgBFTgXdwqCEhIJ32mAupQ&oh=00_AfL44SzRgbv0n-8PQ70aTM76Q38nPFs8lHZch_tUJOeK3w&oe=6832BEDE" alt="Free-Data" style="width: 70%;">
       
                      </center>
  
